Lesson 04 homework part 1 - tests for Scheem parsing and interpreting

--- a/04-interpreter/Scheem_interpreter_tests.html
+++ b/04-interpreter/Scheem_interpreter_tests.html
@@ -14,9 +14,13 @@
   <script>mocha.setup('tdd')</script>
   
   <script src="evalScheem.js"></script>
+  <script src="tests/interpreter_passes.js"></script>
+  <script src="tests/interpreter_fails.js"></script>
   
-  <script src="tests/passes.js"></script>
-  <script src="tests/fails.js"></script>
+  <script src="scheem_parser.js"></script>
+  <script src="tests/parser_passes.js"></script>
+  <script src="tests/parser_fails.js"></script>
+  
   
   <script>
     $(function(){
