--- a/04-interpreter/tests/run_tests.html
+++ b/04-interpreter/tests/run_tests.html
@@ -13,13 +13,13 @@
   
   <script>mocha.setup('tdd')</script>
   
-  <script src="evalScheem.js"></script>
-  <script src="tests/interpreter_passes.js"></script>
-  <script src="tests/interpreter_fails.js"></script>
+  <script src="../evalScheem.js"></script>
+  <script src="interpreter_passes.js"></script>
+  <script src="interpreter_fails.js"></script>
   
-  <script src="scheem_parser.js"></script>
-  <script src="tests/parser_passes.js"></script>
-  <script src="tests/parser_fails.js"></script>
+  <script src="../scheem_parser.js"></script>
+  <script src="parser_passes.js"></script>
+  <script src="parser_fails.js"></script>
   
   
   <script>
