--- a/05-scheem_functions/tests/run_tests.html
+++ b/05-scheem_functions/tests/run_tests.html
@@ -17,7 +17,7 @@
   <script src="../../04-interpreter/scheem_parser.js"></script>
   
   <script src="helpers-lookup_update_bind.js"></script>
-  <script src="functions.js"></script>
+  <script src="let_lambda.js"></script>
   
   <!-- run old tests too! make sure somethings not broken -->
   <script src="interpreter_passes.js"></script>
