Updated pages with HW05 references

--- a/homework04-scheem/index.html
+++ b/homework04-scheem/index.html
@@ -37,7 +37,7 @@
 				<div class='nine columns alpha'>
 					<h1>Scheem</h1>
 					<h2>homework 04 - parsing, interpreting and unit tests</h2>
-          <p>Scheem is a bare bones version of Scheme programming language. The version featured on this page supports only the features covered up to Lesson 4, more capable version will come later.</p>
+          <p>Scheem is a bare bones version of Scheme programming language. The version featured on this page supports only the features covered up to Lesson 4, more capable version is shown at <a href='../homework05/'>homework 5 demo page</a>.</p>
 				</div>
         
         <div class='six columns offset-by-one omega'>
