--- a/homework05/index.html
+++ b/homework05/index.html
@@ -36,7 +36,7 @@
       
 				<div class='nine columns alpha'>
 					<h1>Scheem</h1>
-					<h2>homework 05 - functions</h2>
+					<h2>homework 05 - functions and more</h2>
           <p>Scheem is a bare bones version of Scheme programming language. The version featured on this page adds support for defining and calling functions with <i>lambda</i>, along with support for local variables with <i>let</i>. Examples showing new functionality are colored greenish.</p>
 				</div>
         
