--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
           <h6>homework 4 version</h6>
           <p>Parsing and interpreting the less-featured version of Scheem, supporting only features covered up to Lesson 4.</p>
         </div>
+        <div class='four columns'>
+          <h4><a href='homework05'>Scheem (extended)</a></h4>
+          <h6>homework 5 version</h6>
+          <p>Extended Scheem with support for defining and calling functions with <i>lambda</i>, along with support for local variables with <i>let</i>.</p>
+        </div>
         
       </div>
       
