--- a/homework04-scheem/index.html
+++ b/homework04-scheem/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<title>Scheem parser and interpreter</title>
 		<meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
-		
+		<meta http-equiv="expires" content="0" />
+    
     <!-- theme -->
     <!--[if lt IE 9]><script type='text/javascript' src='../theme/javascript/html5.js'></script><![endif]-->
 		<script src='../theme/javascript/prettify.js'></script>
