--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>bgr's homeworks for Nathan's University PL101</title>
 		<meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
+    <meta http-equiv="expires" content="0" />
     
     <!-- theme -->
 		<!--[if lt IE 9]><script type='text/javascript' src='theme/javascript/html5.js'></script><![endif]-->
