--- a/05-scheem_functions/tests/run_tests.html
+++ b/05-scheem_functions/tests/run_tests.html
@@ -1,6 +1,8 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="expires" content="0" />
+  
   <title>Mocha Tests</title>
   
   <link rel="stylesheet" href="../../04-interpreter/tests/css/mocha.css" />
