Added list procedures  null? list? length  to implement map and fold

--- a/05-scheem_functions/tests/run_tests.html
+++ b/05-scheem_functions/tests/run_tests.html
@@ -20,6 +20,7 @@
   
   <script src="helpers-lookup_update_bind.js"></script>
   <script src="let_lambda.js"></script>
+  <script src="extras.js"></script>
   
   <!-- run old tests too! make sure somethings not broken -->
   <script src="interpreter_passes.js"></script>
