Homework 07 - continuation passing and thunks (Towers of Hanoi)

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 				</div>
 			</header>
 			
-			<div class='sixteen columns'>
-        <div class='four columns'>
+			<div class='container sixteen columns'>
+        <div class='four columns alpha'>
           <h4><a href='homework04-mus'>MUS language</a></h4>
           <h6>combined showcase</h6>
           <p>Shows output of each compilation phase, from my made music notation to syntax tree, to raw notes visualized as a note sheet.</p>
@@ -50,6 +50,11 @@
           <h4><a href='homework05'>Scheem (extended)</a></h4>
           <h6>homework 5 version</h6>
           <p>Extended Scheem with support for defining and calling functions with <i>lambda</i>, along with support for local variables with <i>let</i>.</p>
+        </div>
+        <div class='four columns omega'>
+          <h4><a href='homework07'>Continuations</a></h4>
+          <h6>and thunks, homework 7</h6>
+          <p>Recursive function that solves Towers of Hanoi converted into continuation passing style and thunked.</p>
         </div>
         
       </div>
