--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<h1>bgr's homeworks</h1>
 					<h2>for Nathan's University PL101</h2>
 					
-					<p>For more information about the course check out the <a href='http://nathansuniversity.com/'>Nathan's University Programming Languages 101 homepage</a>.</p>
+					<p>For more information about the course check out the <a href='http://web.archive.org/web/20121230234127/http://nathansuniversity.com/pl101.html'>Nathan's University Programming Languages 101 homepage</a>.</p>
 				</div>
 				
 				<div class='six columns offset-by-one omega'>
